@@ -17,6 +17,59 @@ if( ! defined( 'ABSPATH' ) )
 } // endif
 
 
+// Resuable instance of WP_Query with preset $args
+class Portfolio_Query extends WP_Query { 
+
+	/**
+	 * Declare the default properties
+	 */
+
+	public $post_author = 0;
+	public $post_date = '0000-00-00 00:00:00';
+	public $post_date_gmt = '0000-00-00 00:00:00';
+	public $post_content = '';
+	public $post_title = '';
+	public $post_excerpt = '';
+	public $post_status = 'publish';
+	public $comment_status = 'open';
+	public $ping_status = 'open';
+	public $post_password = '';
+	public $post_name = '';
+	public $to_ping = '';
+	public $pinged = '';
+	public $post_modified = '0000-00-00 00:00:00';
+	public $post_modified_gmt = '0000-00-00 00:00:00';
+	public $post_content_filtered = '';
+	public $post_parent = 0;
+	public $guid = '';
+	public $menu_order = 0;
+	public $post_mime_type = '';
+	public $comment_count = 0;
+	public $filter;
+
+
+	function __construct( $args = array() )
+	{ 
+		$archive_limit   = maxson_portfolio_get_archive_limit();
+		$archive_orderby = maxson_portfolio_get_option( 'archive_orderby' );
+		$archive_order   = maxson_portfolio_get_option( 'archive_order' );
+
+		$args = wp_parse_args( $args, array( 
+			'post_type'      => 'portfolio_project', 
+            'posts_per_page' => $archive_limit, 
+            'order'          => $archive_order, 
+            'orderby'        => $archive_orderby
+		) );
+
+		// Run query
+		parent::query( $args );
+
+	//	parent::__construct( $args );
+	}
+
+}
+
+
 if( ! class_exists( 'Maxson_Portfolio_Projects_Query' ) )
 {  
 	class Maxson_Portfolio_Projects_Query { 
